[package]
name = "rplayer"
version = "0.1.0"
authors = ["sg <sglee487@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence"
] }
log = "0.4.20"

egui_extras = {version = "*", features = ["all_loaders"]}
image = {version = "*", features = ["jpeg", "png"]}
env_logger = "0.11.0"
